<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/help"
        android:icon="@drawable/help"
        android:orderInCategory="1"
        android:title="@string/help"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:orderInCategory="2"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite"
        android:orderInCategory="3"
        android:title="@string/favoritesList"
        app:showAsAction="never" />
    <item
        android:id="@+id/website"
        android:icon="@drawable/website"
        android:orderInCategory="4"
        android:title="@string/CocktailDbWebsite"
        app:showAsAction="never" />
</menu>