<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:gravity="bottom">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/cocktail_header"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="@font/gilroy_light"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/developer_by"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="@font/gilroy_light"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/dreamWeavers"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="@font/gilroy_light"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>